Add iconpack support Support for icon pack ported from: https://github.com/Deletescape-Media/Lawnchair
Launcher3: rework icon pack support
replace icons already on the DB level

Launcher3: full icon pack support
Blatantly copied from OmniSwitch :)

Add custom preference for icon packs

based on
https://github.com/Deletescape-Media/Lawnchair/commit/8a0a79d66c809294ea1c7a95b3e6f66cd7de4e10

Change-Id: I40546e03f61520780763e08fe44f9618f3503095

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -154,4 +154,6 @@
     <item type="id" name="search_container_hotseat" />
     <item type="id" name="search_container_all_apps" />
 
+<!-- Name of an icon pack. -->
+    <string name="iconPackPackageDefault" translatable="false">""</string>
 </resources>
